# substrate-test

./: README.md
node/src/: chain_spec.rs
pallets/nicks/: Cargo.toml
pallets/nicks/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
pallets/usd-rate/: Cargo.toml
pallets/usd-rate/src/: benchmarking.rs  crypto.rs  custom_types.rs  lib.rs  mock.rs  rt_offchain.rs  test.rs  weights.rs  weights1.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
